--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -29,6 +29,7 @@
     "clipboard": "2.0.4",
     "core-js": "3.6.4",
     "crypto-js": "^4.0.0",
+    "ng-zorro-antd": "^9.3.0",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
     "nouislider": "13.1.1",
