--- a/web_app/client/angular.json
+++ b/web_app/client/angular.json
@@ -65,7 +65,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "argon-dashboard-angular:build"
+            "browserTarget": "argon-dashboard-angular:build",
+	          "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
