--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -26,7 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@types/crypto-js": "^3.1.47",
     "bootstrap": "4.1.3",
-    "chart.js": "2.7.3",
+    "chart.js": "^2.7.3",
     "clipboard": "2.0.4",
     "core-js": "3.6.4",
     "crypto-js": "^4.0.0",
