--- a/web_app/server/package.json
+++ b/web_app/server/package.json
@@ -21,6 +21,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.1",
+    "express-unless": "^0.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
