--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -13,13 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.5",
+    "@angular/animations": "^9.0.5",
     "@angular/common": "9.0.5",
     "@angular/compiler": "9.0.5",
     "@angular/core": "9.0.5",
     "@angular/forms": "9.0.5",
     "@angular/http": "7.2.16",
     "@angular/localize": "^9.0.5",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "9.0.5",
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
