created subscription model - updated backend crud - created subscription component & controller - updated ACLs

--- a/web_app/client/.gitignore
+++ b/web_app/client/.gitignore
@@ -5,7 +5,7 @@
 /tmp
 /out-tsc
 
-# dependencies
+# dependencies - just npm install in the project directory "client" after pulling
 /node_modules
 
 # IDEs and editors
