--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "argon-dashboard-angular",
+  "name": "eth_etl_dashboard",
   "version": "1.1.0",
   "scripts": {
     "ng": "ng",
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "9.0.5",
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
+    "@angular/service-worker": "9.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@types/crypto-js": "^3.1.47",
     "bootstrap": "4.1.3",
