--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -27,6 +27,7 @@
     "@angular/service-worker": "9.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@types/crypto-js": "^3.1.47",
+    "@types/socket.io-client": "^1.4.33",
     "bootstrap": "4.1.3",
     "chart.js": "^2.7.3",
     "clipboard": "2.0.4",
@@ -38,6 +39,7 @@
     "nouislider": "13.1.1",
     "rxjs": "6.5.4",
     "secure-web-storage": "^1.0.2",
+    "socket.io-client": "^2.3.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
