--- a/web_app/server/package.json
+++ b/web_app/server/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
