--- a/web_app/client/angular.json
+++ b/web_app/client/angular.json
@@ -36,7 +36,8 @@
             "styles": [
               "src/styles.scss",
               "src/assets/scss/argon.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
