--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -40,6 +40,7 @@
     "rxjs": "6.5.4",
     "secure-web-storage": "^1.0.2",
     "socket.io-client": "^2.3.0",
+    "sweetalert2": "^9.17.1",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
