--- a/web_app/client/angular.json
+++ b/web_app/client/angular.json
@@ -37,7 +37,10 @@
               "src/styles.scss",
               "src/assets/scss/argon.scss",
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-              "node_modules/sweetalert2/src/sweetalert2.scss"
+              "node_modules/sweetalert2/src/sweetalert2.scss",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
