--- a/web_app/client/package.json
+++ b/web_app/client/package.json
@@ -37,6 +37,8 @@
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
     "nouislider": "13.1.1",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.0-rc.3",
     "rxjs": "6.5.4",
     "secure-web-storage": "^1.0.2",
     "socket.io-client": "^2.3.0",
