integrated mongo atlas replica set

--- a/web_app/server/.env
+++ b/web_app/server/.env
@@ -1,3 +1,5 @@
 ACCESS_TOKEN_SECRET=ptROYMOE3Hb$LWw&4u+[rp14l&OSf#
 VAPID_PUBLIC=BEn3LfY0L7Hq6X2j4lojZJTYkHKkETkt3HO8acYoXWyk9Lxxt8-6Z0bhke1QI7tYnfcHEIMw0Jiu6hovLlbi8lM
 VAPID_PRIVATE=oC1cRIshVQO-B2akdQ42vEhuCYwesnOC8Rb6uQzkKfs
+DB_USER=jihed
+DB_PWD=rootroot
